# ochroma

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  README.md
crates/ochroma_engine/: Cargo.toml
crates/ochroma_engine/src/: engine_loop.rs  lib.rs
crates/ochroma_engine/tests/: engine_loop_integration.rs  sdk_test.rs
crates/vox_agent/: Cargo.toml
crates/vox_agent/examples/: boids_behavior.wgsl  flocking.rs
crates/vox_agent/shaders/: default_agent.wgsl  spatial_hash_count.wgsl  spatial_hash_prefix_sum.wgsl  spatial_hash_scatter.wgsl
crates/vox_agent/src/: codegen.rs  compute.rs  desc.rs  editor.rs  gpu.rs  lib.rs  node_graph.rs  scheduler.rs  spatial_hash.rs  state.rs  uniforms.rs
crates/vox_agent/tests/: bench_million.rs
crates/vox_ai/: Cargo.toml
crates/vox_ai/src/: asset_director.rs  building_director.rs  denoiser.rs  dialogue.rs  lib.rs  llm.rs  perception.rs  quality_evaluator.rs
crates/vox_app/: Cargo.toml
crates/vox_app/examples/: city_builder_demo.rs  simple_game.rs
crates/vox_app/src/: agent_layer.rs  ai_bar.rs  ai_fsm.rs  asset_library.rs  autosave.rs  avatar_motion.rs  building_placement.rs  character_controller.rs  content_browser.rs  context_panel.rs  daytime.rs  debug_console.rs  demo_asset.rs  editor.rs  editor_app.rs  ghost_overlays.rs  growth.rs  headless.rs  lib.rs  main.rs  minimap.rs  mode_strip.rs  node_graph_panel.rs  notifications.rs  overlays.rs  persistence.rs  placement.rs  render_to_file.rs  road_builder.rs  scene_tree.rs  screenshot.rs  settings.rs  shortcut_help.rs  simulation.rs  soundscape.rs  steam.rs  systems.rs  terrain_editor.rs  terrain_setup.rs  tutorial.rs  (+3 more)
crates/vox_app/tests/: building_placement_test.rs  content_browser_test.rs  integration_test.rs  stability_test.rs  terrain_editor_test.rs
crates/vox_audio/: Cargo.toml
crates/vox_audio/src/: acoustic_raytracer.rs  adaptive_music.rs  audio_graph.rs  av_sync.rs  biome_soundscape.rs  cpal_backend.rs  ecs.rs  fundsp_graph.rs  hrtf.rs  lib.rs  sdf_reverb.rs  spatial.rs  spectral_acoustic.rs  spectral_reverb.rs  spectral_synth.rs  spectral_synth2.rs  synth.rs
crates/vox_audio/tests/: acoustic_test.rs  audio_test.rs  integration_audio.rs  spatial_test.rs  synth_test.rs
crates/vox_core/: Cargo.toml
crates/vox_core/src/: ai.rs  ai_perception.rs  asset_watcher.rs  behavior_tree.rs  bt_editor.rs  character_controller.rs  drag_drop.rs  ecs.rs  editor_panels.rs  editor_state.rs  editor_tools.rs  engine_runtime.rs  eqs.rs  error.rs  game_loop.rs  game_ui.rs  hot_reload_system.rs  i18n.rs  input.rs  lib.rs  localization.rs  lwc.rs  mapgen.rs  motion_matching.rs  navmesh.rs  output_log.rs  picking.rs  script_interface.rs  skinning.rs  spectral.rs  spectral_damage.rs  spectral_fingerprint.rs  svo.rs  terrain.rs  types.rs  ui_bridge.rs  undo.rs  world_settings.rs
crates/vox_core/tests/: ecs_test.rs  game_loop_test.rs  i18n_test.rs  input_test.rs  lwc_test.rs  mapgen_test.rs  navmesh_perf_test.rs  navmesh_test.rs  picking_test.rs  script_interface_test.rs  spectral_test.rs  svo_test.rs  terrain_test.rs  types_test.rs  undo_test.rs
crates/vox_data/: Cargo.toml
crates/vox_data/src/: asset_catalog.rs  asset_validate.rs  colmap_pipeline.rs  creator_tools.rs  forge_ecs.rs  gi_export.rs  gltf_animation.rs  gltf_import.rs  hot_reload.rs  import_helpers.rs  import_pipeline.rs  lib.rs  library.rs  map_file.rs  marketplace.rs  material_system.rs  materials.rs  neural_compress.rs  osm_import.rs  ply_loader.rs  prefab.rs  proc_gs.rs  proc_gs_advanced.rs  save.rs  scene_format.rs  scene_serialize.rs  spectral_capture.rs  spectral_codec.rs  spectral_upsampler.rs  splat_codec.rs  spz.rs  templates.rs  terrain_splatizer.rs  tile_streamer.rs  vegetation_splatizer.rs  vxm.rs  vxm_v2.rs  world_save.rs
crates/vox_data/tests/: asset_catalog_test.rs  creator_tools_test.rs  file_io_test.rs  gltf_animation_test.rs  gltf_import_test.rs  hot_reload_test.rs  import_test.rs  library_disk_test.rs  library_test.rs  map_file_test.rs  marketplace_test.rs  material_system_test.rs  materials_test.rs  neural_compress_test.rs  osm_import_test.rs  ply_integration_test.rs  ply_loader_test.rs  ply_real_test.rs  prefab_test.rs  proc_gs_advanced_test.rs  proc_gs_test.rs  save_test.rs  scene_format_test.rs  scene_serialize_test.rs  templates_test.rs  vxm_test.rs  vxm_v2_test.rs  vxm_version_roundtrip_test.rs  world_save_test.rs
crates/vox_editor/: Cargo.toml
crates/vox_editor/src/: content_browser.rs  editor_panel.rs  gizmo_interaction.rs  lib.rs  node_graph.rs  node_thumbnail.rs  registry.rs  subgraph.rs  templates.rs
crates/vox_net/: Cargo.toml
crates/vox_net/src/: crdt.rs  lib.rs  lobby.rs  net_walk_demo.rs  quic_transport.rs  replication.rs  replication_loop.rs  replication_packet.rs  replication_system.rs  rollback.rs  spectral_relevance.rs  splat_replication.rs  transport.rs  world_hosting.rs  world_replication.rs
crates/vox_net/tests/: crdt_test.rs  lobby_test.rs  net_session_e2e.rs  quic_e2e_test.rs  replication_bandwidth.rs  replication_test.rs  transport_test.rs  world_hosting_test.rs
crates/vox_nn/: Cargo.toml
crates/vox_nn/src/: city_block.rs  history_gen.rs  layout.rs  lib.rs  llm_client.rs  multi_tile.rs  nl_commands.rs  scene_graph.rs  scene_query.rs  street_layout.rs  text_to_city.rs
crates/vox_nn/tests/: city_block_test.rs  history_gen_test.rs  layout_test.rs  llm_client_test.rs  multi_tile_test.rs  nl_commands_test.rs  scene_query_test.rs  street_layout_test.rs  text_to_city_test.rs
crates/vox_nodes/: Cargo.toml
crates/vox_nodes/src/: lib.rs  mat_nodes.rs
crates/vox_physics/: Cargo.toml
crates/vox_physics/benches/: pbf_perf.rs
crates/vox_physics/src/: character_body.rs  cloth.rs  collision_layers.rs  destruction.rs  ecs.rs  fluid.rs  lib.rs  pbf.rs  rapier.rs  rope.rs  spectral_damage.rs  spectral_fracture.rs  spectral_physics.rs  spectral_resonance.rs  (+4 more)
crates/vox_render/: Cargo.toml
crates/vox_script/: Cargo.toml
crates/vox_tools/: Cargo.toml
crates/vox_ui/: Cargo.toml
crates/vox_usd/: Cargo.toml
crates/vox_web/: Cargo.toml
(+569 files in other folders)
