[workspace]
resolver = "2"
members = [
    "crates/vox_core",
    "crates/vox_data",
    "crates/vox_render",
    "crates/vox_app",
    "crates/vox_nn",
    "crates/vox_sim",
    "crates/vox_net",
    "crates/vox_script",
    "crates/vox_audio",
    "crates/vox_physics",
    "crates/vox_terrain",
    "crates/vox_ui",
    "crates/vox_tools",
    "crates/ochroma_engine",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
glam = { version = "0.29", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
half = { version = "2", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
zstd = "0.13"
bevy_ecs = "0.16"
bevy_app = "0.16"
dashmap = "6"
toml = "0.8"
puffin = "0.19"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "macros", "net", "sync"] }
egui = "0.31"
