[workspace]
resolver = "2"
members = [
    "crates/vox_core",
    "crates/vox_data",
    "crates/vox_render",
    "crates/vox_app",
    "crates/vox_nn",
    "crates/vox_sim",
    "crates/vox_net",
    "crates/vox_script",
    "crates/vox_audio",
    "crates/vox_physics",
    "crates/vox_terrain",
    "crates/vox_ui",
    "crates/vox_tools",
    "crates/vox_nodes",
    "crates/vox_editor",
    "crates/ochroma_engine",
    "crates/vox_web",
    "crates/vox_ai",
]
# vendor/shader-slang is a patched copy of the crates.io `shader-slang 0.1.0`
# crate, used only as a [patch.crates-io] target for the optional
# `spectra-native` feature. It is NOT a workspace member.
exclude = ["vendor/shader-slang"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ochroma-engine/ochroma"
homepage = "https://ochroma.dev"
authors = ["Ochroma Contributors"]

[workspace.dependencies]
glam = { version = "0.29", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
half = { version = "2", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
zstd = "0.13"
bevy_ecs = "0.16"
bevy_app = "0.16"
dashmap = "6"
toml = "0.8"
puffin = "0.19"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "macros", "net", "sync"] }
egui = "0.31"
vox_nodes      = { path = "crates/vox_nodes" }
vox_ui         = { path = "crates/vox_ui" }

# NOTE: Releases are produced by the HAND-ROLLED .github/workflows/release.yml,
# NOT by cargo-dist. cargo-dist's standard runner flow checks out only the
# tagged repo and can't lay out the required sibling repos (spectra, crucible)
# side-by-side, so this workspace can't build under it. The release workflow
# mirrors ci.yml's three-repo checkout instead. Linux x86_64 only for now.

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# ---------------------------------------------------------------------------
# Track S — spectra-native (Vulkan + Slang) bring-up.
#
# The `shader-slang 0.1.0` crate (pulled by spectra-renderer/spectra-gpu when
# the OPTIONAL `vox_render/spectra-native` feature is enabled) references the
# FFI symbol `spReflectionVariable_GetDefaultValueInt`, which does NOT exist in
# the Slang 2024.14.5 SDK — the version whose C++ vtable ABI `shader-slang-sys
# 0.1.0` is hand-written against. (The symbol was first added in Slang v2025.6,
# which is too new to keep the 0.1.0 vtable ABI valid.) We vendor a copy of
# `shader-slang 0.1.0` with that single unused method stubbed and substitute it
# here. This patch is INERT for the default build, which never pulls
# shader-slang (it uses the `crucible` feature).
[patch.crates-io]
shader-slang = { path = "vendor/shader-slang" }
