[package]
name = "ochroma_engine"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Spectral Gaussian Splatting game engine — 16-band spectral rendering, physics, audio, and AI"
keywords = ["game-engine", "gaussian-splatting", "spectral", "rendering", "wgpu"]
categories = ["game-engines", "rendering", "graphics"]

[features]
default = ["rendering", "simulation", "audio"]
rendering = []
simulation = []
audio = []
networking = []
scripting = []
vr = []
full = ["rendering", "simulation", "audio", "networking", "scripting", "vr"]

[dependencies]
vox_core = { path = "../vox_core" }
vox_data = { path = "../vox_data" }
vox_render = { path = "../vox_render" }
vox_sim = { path = "../vox_sim" }
vox_audio = { path = "../vox_audio" }
vox_physics = { path = "../vox_physics" }
vox_terrain = { path = "../vox_terrain" }
vox_ui = { path = "../vox_ui" }
vox_net = { path = "../vox_net" }
vox_script = { path = "../vox_script" }
vox_nn = { path = "../vox_nn" }
glam = { workspace = true }
uuid = { workspace = true }
