[package]
name = "vox_ai"
edition.workspace = true
version.workspace = true

[dependencies]
# NOTE: candle-core / candle-nn were declared here but had ZERO imports anywhere
# in the crate. They are heavy (pull in gemm, ug, etc.) so they were removed
# rather than left as dead dependencies. When real neural inference (denoiser
# CNN forward pass, local LLM) is implemented, re-add candle behind an optional
# feature gate (e.g. `neural = ["dep:candle-core", "dep:candle-nn"]`).
anyhow   = "1"
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
tokio    = { version = "1", features = ["rt-multi-thread", "macros"] }
glam     = { workspace = true }
half     = { workspace = true }
vox_core = { path = "../vox_core" }

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["rt-multi-thread", "macros"] }
