[package]
name = "vox_app"
edition.workspace = true
version.workspace = true
repository.workspace = true

[features]
default = []
web = ["dep:wasm-bindgen", "dep:console_error_panic_hook", "dep:web-sys"]
spectra-native = ["vox_render/spectra-native"]
# forge-native: glue to the native AetherSpectra Forge generators (the Rust
# sibling at ~/src/aetherspectra/forge). OFF BY DEFAULT and behind OPTIONAL path
# deps, mirroring `spectra-native` in vox_render: a non-optional path dep would
# break every machine without the sibling checkout (the documented build-break
# gotcha). With the feature off, the Forge tab's "Add building" plants a
# deterministic built-in PREVIEW box; with it on, the SAME button calls the real
# `forge_building::generate()` and surfel-samples its mesh into splats.
forge-native = ["dep:forge-building", "dep:forge-mesh"]

[dependencies]
vox_core = { path = "../vox_core" }
vox_ai   = { path = "../vox_ai" }
vox_data = { path = "../vox_data" }
vox_render = { path = "../vox_render" }
vox_nn = { path = "../vox_nn" }
vox_sim = { path = "../vox_sim" }
vox_net = { path = "../vox_net" }
vox_script = { path = "../vox_script" }
vox_audio = { path = "../vox_audio" }
vox_physics = { path = "../vox_physics" }
vox_terrain = { path = "../vox_terrain" }
vox_editor = { path = "../vox_editor" }
vox_ui = { path = "../vox_ui", features = ["game-ui"] }  # the GPU vector-UI path is enabled HERE, not by default
ochroma_engine = { path = "../ochroma_engine" }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
navmesh = "0.9"
wgpu = "24"
winit = "0.30"
pollster = "0.4"
glam = { workspace = true }
half = { workspace = true }
uuid = { workspace = true }
puffin = { workspace = true }
puffin_http = "0.16"
egui = { workspace = true }
egui-wgpu = "0.31"
egui-winit = "0.31"
egui_dock = "0.16"  # egui-0.31-compatible (verified: egui ^0.31); dockable tab shell
dirs-next = "2"
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }
rhai = "1"

# Native Forge generators — OPTIONAL path deps to the AetherSpectra Forge sibling
# (crate names are `forge-building` / `forge-mesh`, see their Cargo.tomls). The
# relative path from crates/vox_app resolves ../../.. -> ~/src, then into the
# forge workspace. Both are `optional = true` so a missing sibling checkout
# leaves default/CI builds completely unaffected; the `forge-native` feature
# above turns them on.
forge-building = { path = "../../../aetherspectra/forge/crates/building", optional = true }
forge-mesh     = { path = "../../../aetherspectra/forge/crates/mesh", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Document", "HtmlCanvasElement"] }
# Force getrandom to use JS RNG on wasm32 (required by rand, uuid, etc.)
# 0.2.x (used by uuid, older deps) needs "js"; 0.3.x / 0.4.x (used by rand 0.9) need "wasm_js".
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "ochroma"
path = "src/bin/engine_runner.rs"

[[bin]]
name = "shell_snapshot"
path = "src/bin/shell_snapshot.rs"

[[bin]]
name = "ochroma_editor"
path = "src/bin/ochroma_editor.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "walking_sim"
path = "src/bin/walking_sim.rs"

[[bin]]
name = "splat_view"
path = "src/bin/splat_view.rs"

[[bin]]
name = "platformer"
path = "src/bin/platformer.rs"

[[bin]]
name = "render_showcase"
path = "src/bin/render_showcase.rs"

[[bin]]
name = "hello_splat"
path = "src/bin/hello_splat.rs"

[[example]]
name = "simple_game"
path = "examples/simple_game.rs"

[[example]]
name = "city_builder_demo"
path = "examples/city_builder_demo.rs"
