[package]
name = "vox_audio"
edition.workspace = true
version.workspace = true

[dependencies]
vox_core = { path = "../vox_core" }
glam = { workspace = true }
serde = { workspace = true }
serde_json = "1"
# rodio requires libasound2-dev on Linux: sudo apt-get install libasound2-dev
rodio = { version = "0.19", optional = true }

[features]
default = ["audio-backend"]
audio-backend = ["dep:rodio"]
