[package]
name = "vox_audio"
edition.workspace = true
version.workspace = true

[dependencies]
vox_core = { path = "../vox_core" }
glam = { workspace = true }
half = { workspace = true }
serde = { workspace = true }
serde_json = "1"
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
# rodio requires libasound2-dev on Linux: sudo apt-get install libasound2-dev
rodio = { version = "0.19", optional = true }
cpal = { version = "0.15", optional = true }
fundsp = { version = "0.18", optional = true }
lewton = { version = "0.10", optional = true }

[features]
default = ["audio-backend"]
audio-backend = ["dep:rodio", "dep:cpal", "dep:fundsp", "dep:lewton"]
