[package]
name = "vox_core"
edition.workspace = true
version.workspace = true

[dependencies]
glam = { workspace = true }
uuid = { workspace = true }
half = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
bevy_ecs = { workspace = true }
dashmap = { workspace = true }
