[package]
name = "vox_data"
edition.workspace = true
version.workspace = true

[dependencies]
vox_core = { path = "../vox_core" }
zstd = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
serde_json = "1"
uuid = { workspace = true }
half = { workspace = true }
glam = { workspace = true }
toml = { workspace = true }
rand = "0.9"
gltf = "1"
dirs-next = "2"

[dev-dependencies]
vox_render = { path = "../vox_render" }
vox_core = { path = "../vox_core" }
glam = { workspace = true }
tempfile = "3"
