[package]
name = "vox_editor"
edition = "2021"
version.workspace = true

[dependencies]
vox_core    = { path = "../vox_core" }
vox_data    = { path = "../vox_data" }
vox_usd     = { path = "../vox_usd" }
vox_render  = { path = "../vox_render" }
glam        = { workspace = true }
half        = { workspace = true }
serde       = { workspace = true }
thiserror   = { workspace = true }
egui        = { workspace = true }
flate2      = "1"
hashbrown   = "0.15"
serde_json  = "1"
noise       = "0.9"
rand        = "0.8"
rand_pcg    = "0.3"
