[package]
name = "vox_net"
edition.workspace = true
version.workspace = true

[dependencies]
vox_core = { path = "../vox_core" }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
# QUIC transport
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
# Replication codec
half = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
