[package]
name = "vox_render"
edition.workspace = true
version.workspace = true

[dependencies]
vox_core = { path = "../vox_core" }
wgpu = "24"
raw-window-handle = "0.6"
pollster = "0.4"
bytemuck = { workspace = true }
half = { workspace = true }
glam = { workspace = true }
winit = "0.30"
puffin = { workspace = true }
tokio = { workspace = true }
vox_data = { path = "../vox_data" }
rand = "0.9"
rayon = "1.10"
dirs-next = "2"
serde = { workspace = true }
toml = { workspace = true }
egui = { workspace = true }
uuid = { workspace = true }
serde_json = "1"
vox_nodes = { workspace = true }
vox_ui    = { workspace = true }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
spectra-renderer = { path = "../../../aetherspectra/.worktrees/ochroma-spectra-integration/spectra/rust/spectra-renderer", optional = true }

[features]
default = []
spectra-native = ["dep:spectra-renderer"]

[dev-dependencies]
vox_sim = { path = "../vox_sim" }
vox_terrain = { path = "../vox_terrain" }
tempfile = "3"
naga = { version = "24", features = ["wgsl-in"] }
