[package]
name = "vox_render"
edition.workspace = true
version.workspace = true

[dependencies]
vox_core = { path = "../vox_core" }
wgpu = "24"
raw-window-handle = "0.6"
pollster = "0.4"
bytemuck = { workspace = true }
half = { workspace = true }
glam = { workspace = true }
winit = "0.30"
puffin = { workspace = true }
tokio = { workspace = true }
vox_data = { path = "../vox_data" }
rand = "0.9"
rayon = "1.10"
dirs-next = "2"
serde = { workspace = true }
toml = { workspace = true }
egui = { workspace = true }
uuid = { workspace = true }
serde_json = "1"
vox_nodes = { workspace = true }
vox_ui    = { workspace = true }
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
spectra-gaussian-render = { path = "../../../spectra/rust/spectra-gaussian-render" }
spectra-renderer = { path = "../../../spectra/rust/spectra-renderer", optional = true }
spectra-gpu = { path = "../../../spectra/rust/spectra-gpu", optional = true }
spectra-scene-state = { path = "../../../spectra/rust/spectra-scene-state", optional = true }

[features]
default = ["crucible"]
# spectra-native: glue to the native spectra path-tracer.
#
# `spectra-gpu/vulkan-backend` makes `VulkanSlangBackend` (Slang->SPIR-V + ash)
# available alongside the default CUDA backend. The runtime selector in
# `splat_backend.rs` tries Vulkan first and falls back to CUDA, so this feature
# runs on boxes with no NVIDIA GPU (e.g. Mesa/lavapipe CPU Vulkan) while leaving
# the CUDA path intact where a driver is present. `spectra-renderer`'s own
# default features keep `cuda` enabled, so the CUDA backend remains compiled in.
spectra-native = [
    "dep:spectra-renderer",
    "dep:spectra-gpu",
    "dep:spectra-scene-state",
    "spectra-gpu/vulkan-backend",
]
crucible = ["vox_nodes/crucible"]

[dev-dependencies]
vox_sim = { path = "../vox_sim" }
vox_terrain = { path = "../vox_terrain" }
tempfile = "3"

[dependencies.naga]
version = "24"
features = ["wgsl-in", "wgsl-out"]
