[package]
name = "vox_script"
edition.workspace = true
version.workspace = true

[features]
default = []
wasm-runtime = ["wasmtime"]

[dependencies]
vox_core = { path = "../vox_core" }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
serde_json = "1"
wasmtime = { version = "27", optional = true }
rhai = "1"
