[package]
name = "ochroma-tools"
edition.workspace = true
version.workspace = true
repository.workspace = true

[lib]
name = "vox_tools"
path = "src/lib.rs"

[[bin]]
name = "vox_tools"
path = "src/main.rs"

[[bin]]
name = "ochroma-tools"
path = "src/ochroma_main.rs"

[dependencies]
vox_core = { path = "../vox_core" }
vox_data = { path = "../vox_data" }
vox_usd  = { path = "../vox_usd" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
uuid = { workspace = true }
half = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1"
glam = { workspace = true }
gltf = "1"
