[package]
name = "vox_ui"
edition.workspace = true
version.workspace = true

[dependencies]
vox_core = { path = "../vox_core" }
glam = { workspace = true }
serde = { workspace = true }
serde_json = "1"
egui = { workspace = true }
vello  = { version = "0.4", optional = true }
parley = { version = "0.3", optional = true }
taffy  = { version = "0.7", optional = true }

[features]
game-ui = ["dep:vello", "dep:parley", "dep:taffy"]
