[package]
name = "vox_ui"
edition.workspace = true
version.workspace = true

[dependencies]
vox_core = { path = "../vox_core" }
glam = { workspace = true }
serde = { workspace = true }
serde_json = "1"
egui = { workspace = true }
egui-phosphor = "0.9"  # egui-0.31-compatible (verified: egui ^0.31); vector icon family
vello    = { version = "0.4", optional = true }
parley   = { version = "0.3", optional = true }
swash    = { version = "0.2", optional = true }
taffy    = { version = "0.7", optional = true }
pollster = { version = "0.4", optional = true }

[features]
# OPT-IN: the Vello GPU vector-UI path (rank-1 adoption candidate). vox_app
# enables it explicitly; non-UI dependents (vox_render, ochroma_engine,
# vox_nodes) must not drag vello + parley + taffy + a second wgpu into every
# build. The CPU `VelloCtxCpu` fallback is always compiled. NOTE: an isolated
# `cargo test -p vox_ui` skips the GPU tests — run with `--features game-ui`
# (workspace-wide test runs get it via vox_app's dependency edge).
default  = []
game-ui  = ["dep:vello", "dep:parley", "dep:swash", "dep:taffy", "dep:pollster"]
